# diffswarm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  app.py  bun.lockb  compose.yml  fly.toml  package-lock.json  package.json  pyproject.toml  pytest.ini  sqlite:
.github/workflows/: build.yml  deploy.yml
.zed/: debug.json  settings.json  tasks.json
migrations/: env.py
migrations/versions/: 78792e4b8dbc_description.py  8adf2048f645_initial.py
src/diffswarm/: __init__.py
src/diffswarm/app/: __init__.py  _testing.py  app.py  database.py  dependencies.py  models.py  settings.py  y.py
src/diffswarm/app/routers/: __init__.py  api.py  pages.py  websockets.py
src/diffswarm/app/static/js/: diff.js
src/diffswarm/app/templates/: __init__.py  base.html  diff.html  diff.jinja2
src/diffswarm/app/templates/includes/: diff-app.html  diff-file-header.html
src/diffswarm/app/templates/pages/: diff.html  index.html
src/diffswarm/app/templates/pages/diffs/[diff_id]/: index.html
src/diffswarm/tools/: __init__.py  invoke.py
tests/: test_diffswarm.py
tests/fixtures/: 1.diff  2.diff
